Finish static pages

--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,2 +1,8 @@
-<h1>StaticPages#help</h1>
-<p>Find me in app/views/static_pages/help.html.erb</p>
+<% provide(:title, 'Help') %>
+<h1>Help</h1>
+  <p>
+      Mozesz uzyskac pomoc z Ruby'ego na stronie:
+      <a href="http://railstutorial.org/help">Rails Tutorial Help page</a>
+      Aby uzyskac pomoc odnosnie tej aplikacji nalezy odwiedzic:
+      <a href="http://railstutorial.org/book">rails Tutorial book</a>
+  </p>
